modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/static_var_init_non_static_call.gd
@static_unload

func non_static():
	return "non static"

static var static_var = non_static()

func test():
	print("does not run")
